Atualização da HTML serie

--- a/html5/form_complete.html
+++ b/html5/form_complete.html
@@ -59,6 +59,7 @@
         <option value="vendas">Vendas</option>
         <option value="gerencia">Gerência</option>
         <option value="coordenacao">Coordenação</option>
+        <option value="atendimento">Atendimento</option>
     </select>
 
 
