--- a/html5/form_complete.html
+++ b/html5/form_complete.html
@@ -11,7 +11,7 @@
     GET - Envia os dados pela URL (VELOZ)
     enctype - Para envio de arquivos
     -->
-<form action="recebe_dados.php" method="post" enctype="multipart/form-data">
+<input action="recebe_dados.php" method="post" enctype="multipart/form-data">
     <h2>Informações Pessoais</h2>
     <label>Primeiro Nome</label>
     <input type="text" placeholder="Digite somente seu primeiro nome" name="first_name"> <br/>
@@ -61,6 +61,50 @@
         <option value="coordenacao">Coordenação</option>
         <option value="atendimento">Atendimento</option>
     </select>
+    <hr>
+
+    <h2>De qual estado você está se candidatando</h2>
+    <label for="estado">Selecione o Estado</label> <br>
+    <select name="estado" id="estado">
+        <optgroup label="REGIÃO NORTE" />
+        <option value="Acre">Acre</option>
+        <option value="Amapá">Amapá</option>
+        <option value="Amazonas">Amazonas</option>
+        <option value="Pará">Pará</option>
+        <option value="Rondônia">Rondônia</option>
+        <option value="Roraima">Roraima</option>
+        <optgroup label="REGIÃO NORDESTE" />
+        <option value="Tocantins">Tocantins</option>
+        <option value="Maranhão">Maranhão</option>
+        <option value="Piauí">Piauí</option>
+        <option value="Ceará">Ceará</option>
+        <option value="Rio Grande do Norte">Rio Grande do Norte</option>
+        <option value="Paraíba">Paraíba</option>
+        <option value="Pernambuco">Pernambuco</option>
+        <option value="Alagoas">Alagoas</option>
+        <option value="Sergipe">Sergipe</option>
+        <optgroup label="CENTRO OESTE" />
+        <option value="Goiás">Goiás</option>
+        <option value="Mato Grosso">Mato Grosso</option>
+        <option value="Mato Grosso do Sul">Mato Grosso do Sul</option>
+        <option value="Distrito Federal">Distrito Federal</option>
+        <optgroup label="SUDESTE" />
+        <option value="Minas Gerais">Minas Gerais</option>
+        <option value="Espírito Santo">Espírito Santo</option>
+        <option value="São Paulo">São Paulo</option>
+        <option value="Rio de Janeiro">Rio de Janeiro</option>
+        <optgroup label="SUL" />
+        <option value="Paraná">Paraná</option>
+        <option value="Santa Catarina">Santa Catarina</option>
+        <option value="Rio Grande do Sul">Rio Grande do Sul</option>
+    </select>
+
+    <hr>
+
+    <h2>Envie sua mensagem</h2>
+    <label for="mensagem">Sua Mensagem</label> <br>
+    <textarea name="mensagem" id="mensagem" cols="60" rows="5" placeholder="Um texto qualquer"></textarea>
+
 
 
 </form>
